Finally fixed configuration cache and data path problems